P2/jcc_files/alike.java
/* alike.java */
/* Generated By:JavaCC: Do not edit this line. alike.java */
package traductor;

public class alike implements alikeConstants {
        // Variable global necesaria para controlar la derivabilidad de la instrucción 'return' 
        // dependiendo de si nos encontramos en una función o en un procedimiento. 
   static boolean inFunction = false;

   public static void main(String[] args) {
           alike parser = null;

           try {
                   if(args.length == 0) {
                           parser = new alike(System.in);
                   }
                   else {
                           parser = new alike(new java.io.FileInputStream(args[0]));
                   }
                   //Programa es el símbolo inicial de la gramática
                   parser.Programa();
                   //...
                   System.out.println("***** An\u00e1lisis terminado con \u00e9xito *****");
           }
           catch (java.io.FileNotFoundException e) {
                   System.err.println ("Fichero " + args[0] + " no encontrado.");
           }
           catch (TokenMgrError e) {
                // Tiene que quedar el mensaje así
                // ERROR LÉXICO: (<línea, columna>): símbolo no reconocido: <símbolo>
                   System.err.println("ERROR L\u00c9XICO: " + e.getMessage());
           }
           catch (ParseException e) {
                   System.err.println("PARSER_ERROR: " + e.getMessage());
           }
           catch (Exception e) {
                   e.printStackTrace();
           }
   }

//-------------------👇🏼 Analizador sintáctico 👇🏼-------------------

//------------ Símbolo inicial de la gramática.
// Programa: <tPROCEDURE> <tID> <tIS> (declaracion_var)* (declaracion_procedimiento | declaracion_funcion)* <tBEGIN> instruccion* <tEND> <tSEMICOLON> <EOF>
  static final public void Programa() throws ParseException {
    jj_consume_token(tPROCEDURE);
    jj_consume_token(tID);
    jj_consume_token(tIS);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tID:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      declaracion_var();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tPROCEDURE:
      case tFUNCTION:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tPROCEDURE:{
        declaracion_procedimiento();
        break;
        }
      case tFUNCTION:{
        declaracion_funcion();
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(tBEGIN);
    label_3:
    while (true) {
      instruccion();
      if (jj_2_1(1)) {
        ;
      } else {
        break label_3;
      }
    }
    jj_consume_token(tEND);
    jj_consume_token(tSEMICOLON);
    jj_consume_token(0);
}

//declaracion_var: lista_ids <tCOLON> tipo_variable <tSEMICOLON>
  static final public void declaracion_var() throws ParseException {
    lista_ids();
    jj_consume_token(tCOLON);
    tipo_variable();
    jj_consume_token(tSEMICOLON);
}

//lista_ids: <tID> (<tCOMMA> <tID>)*
  static final public void lista_ids() throws ParseException {
    jj_consume_token(tID);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tCOMMA:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_4;
      }
      jj_consume_token(tCOMMA);
      jj_consume_token(tID);
    }
}

//tipo_variable: (tipo_variable_simple | tipo_variable_array)
  static final public void tipo_variable() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tINT:
    case tCHAR:
    case tBOOL:{
      tipo_variable_simple();
      break;
      }
    case tARRAY:{
      tipo_variable_array();
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

//tipo_variable_simple: <tINT> | <tCHAR> | <tBOOL>
  static final public void tipo_variable_simple() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tINT:{
      jj_consume_token(tINT);
      break;
      }
    case tCHAR:{
      jj_consume_token(tCHAR);
      break;
      }
    case tBOOL:{
      jj_consume_token(tBOOL);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

//tipo_variable_array: <tARRAY> <tLPAREN> <tCONST_INT> <tRANGE> <tCONST_INT> <tRPAREN> <tOF> tipo_variable_simple
  static final public void tipo_variable_array() throws ParseException {
    jj_consume_token(tARRAY);
    jj_consume_token(tLPAREN);
    jj_consume_token(tCONST_INT);
    jj_consume_token(tRANGE);
    jj_consume_token(tCONST_INT);
    jj_consume_token(tRPAREN);
    jj_consume_token(tOF);
    tipo_variable_simple();
}

//declaracion_procedimiento: cabecera_procedimiento (declaracion_var)* (declaracion_procedimiento | declaracion_funcion)* <tBEGIN> instrucciones <tEND>
  static final public void declaracion_procedimiento() throws ParseException {
    jj_consume_token(tPROCEDURE);
    jj_consume_token(tID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tLPAREN:{
      jj_consume_token(tLPAREN);
      lista_parametros();
      jj_consume_token(tRPAREN);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(tIS);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tID:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_5;
      }
      declaracion_var();
    }
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tPROCEDURE:
      case tFUNCTION:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tPROCEDURE:{
        declaracion_procedimiento();
        break;
        }
      case tFUNCTION:{
        declaracion_funcion();
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(tBEGIN);
    label_7:
    while (true) {
      instruccion();
      if (jj_2_2(1)) {
        ;
      } else {
        break label_7;
      }
    }
    jj_consume_token(tEND);
    jj_consume_token(tSEMICOLON);
}

//declaracion_funcion: <tFUNCTION> <tID> ( <tLPAREN> lista_parametros <tRPAREN> )? <tRETURN> tipo_variable <tIS> (declaracion_var)* (declaracion_procedimiento | declaracion_funcion)* <tBEGIN> instrucciones <tEND>
  static final public void declaracion_funcion() throws ParseException {
    jj_consume_token(tFUNCTION);
    jj_consume_token(tID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tLPAREN:{
      jj_consume_token(tLPAREN);
      lista_parametros();
      jj_consume_token(tRPAREN);
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    jj_consume_token(tRETURN);
    tipo_variable_simple();
    jj_consume_token(tIS);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tID:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_8;
      }
      declaracion_var();
    }
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tPROCEDURE:
      case tFUNCTION:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tPROCEDURE:{
        declaracion_procedimiento();
        break;
        }
      case tFUNCTION:{
        declaracion_funcion();
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(tBEGIN);
alike.inFunction = true;
    label_10:
    while (true) {
      instruccion();
      if (jj_2_3(1)) {
        ;
      } else {
        break label_10;
      }
    }
alike.inFunction = false;
    jj_consume_token(tEND);
    jj_consume_token(tSEMICOLON);
}

//lista_parametros: parametro_formal (<tSEMICOLON> parametro_formal)*
  static final public void lista_parametros() throws ParseException {
    parametro_formal();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tSEMICOLON:{
        ;
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        break label_11;
      }
      jj_consume_token(tSEMICOLON);
      parametro_formal();
    }
}

//parametro_formal: lista_ids <tCOLON> <tREF>? tipo_variable
  static final public void parametro_formal() throws ParseException {
    lista_ids();
    jj_consume_token(tCOLON);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tREF:{
      jj_consume_token(tREF);
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    tipo_variable();
}

/*------------------------------------------- INSTRUCCIONES -------------------------------------------*/


//instruccion: (inst_leer | <tSKIP_LINE> | inst_escribir | inst_escribir_linea | inst_invocacion_procedimiento | inst_asignacion | inst_if | inst_while | inst_return | <tNULL>) <tSEMICOLON>
// 'inst_return' solamente es derivable si estamos dentro de una función. Este comportamiento se consigue gracias al LOOKAHEAD sintáctico.
  static final public void instruccion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tGET:{
      inst_leer();
      break;
      }
    case tSKIP_LINE:{
      jj_consume_token(tSKIP_LINE);
      break;
      }
    case tPUT:{
      inst_escribir();
      break;
      }
    case tPUT_LINE:{
      inst_escribir_linea();
      break;
      }
    case tID:{
      inst_invocacion_procedimiento_o_asignacion();
      break;
      }
    case tIF:{
      inst_if();
      break;
      }
    case tWHILE:{
      inst_while();
      break;
      }
    case tNULL:{
      jj_consume_token(tNULL);
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      if (alike.inFunction) {
        inst_return();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(tSEMICOLON);
}

//inst_leer: <tGET> <tLPAREN> <tID> (array_component)? ( <tCOMMA> <tID> (array_component)? )* <tRPAREN>
  static final public void inst_leer() throws ParseException {
    jj_consume_token(tGET);
    jj_consume_token(tLPAREN);
    jj_consume_token(tID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tLPAREN:{
      array_component();
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tCOMMA:{
        ;
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        break label_12;
      }
      jj_consume_token(tCOMMA);
      jj_consume_token(tID);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tLPAREN:{
        array_component();
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        ;
      }
    }
    jj_consume_token(tRPAREN);
}

//array_component: <tLPAREN> expresion <tRPAREN>
  static final public void array_component() throws ParseException {
    jj_consume_token(tLPAREN);
    expresion();
    jj_consume_token(tRPAREN);
}

//inst_escribir: <tPUT> <tLPAREN> (<tCONST_STRING> | expresion) ( <tCOMMA> (<tCONST_STRING> | expresion) )* <tRPAREN>
  static final public void inst_escribir() throws ParseException {
    jj_consume_token(tPUT);
    jj_consume_token(tLPAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tCONST_STRING:{
      jj_consume_token(tCONST_STRING);
      break;
      }
    case tLPAREN:
    case tINT2CHAR:
    case tCHAR2INT:
    case tTRUE:
    case tFALSE:
    case tCONST_INT:
    case tCONST_CHAR:
    case tNOT:
    case tPLUS:
    case tMINUS:
    case tID:{
      expresion();
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tCOMMA:{
        ;
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        break label_13;
      }
      jj_consume_token(tCOMMA);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tCONST_STRING:{
        jj_consume_token(tCONST_STRING);
        break;
        }
      case tLPAREN:
      case tINT2CHAR:
      case tCHAR2INT:
      case tTRUE:
      case tFALSE:
      case tCONST_INT:
      case tCONST_CHAR:
      case tNOT:
      case tPLUS:
      case tMINUS:
      case tID:{
        expresion();
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(tRPAREN);
}

//inst_escribir_linea: <tPUT_LINE> (<tLPAREN> expresion (<tCOMMA> expresion)* <tRPAREN>)?
  static final public void inst_escribir_linea() throws ParseException {
    jj_consume_token(tPUT_LINE);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tLPAREN:{
      jj_consume_token(tLPAREN);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tCONST_STRING:{
        jj_consume_token(tCONST_STRING);
        break;
        }
      case tLPAREN:
      case tINT2CHAR:
      case tCHAR2INT:
      case tTRUE:
      case tFALSE:
      case tCONST_INT:
      case tCONST_CHAR:
      case tNOT:
      case tPLUS:
      case tMINUS:
      case tID:{
        expresion();
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_14:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case tCOMMA:{
          ;
          break;
          }
        default:
          jj_la1[24] = jj_gen;
          break label_14;
        }
        jj_consume_token(tCOMMA);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case tCONST_STRING:{
          jj_consume_token(tCONST_STRING);
          break;
          }
        case tLPAREN:
        case tINT2CHAR:
        case tCHAR2INT:
        case tTRUE:
        case tFALSE:
        case tCONST_INT:
        case tCONST_CHAR:
        case tNOT:
        case tPLUS:
        case tMINUS:
        case tID:{
          expresion();
          break;
          }
        default:
          jj_la1[25] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(tRPAREN);
      break;
      }
    default:
      jj_la1[26] = jj_gen;
      ;
    }
}

//inst_invocacion_procedimiento_o_asignacion: <tID> ( inst_asignacion | inst_invocacion_procedimiento )
  static final public void inst_invocacion_procedimiento_o_asignacion() throws ParseException {
    jj_consume_token(tID);
    if (jj_2_4(2147483647)) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tLPAREN:{
        array_component();
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        ;
      }
      jj_consume_token(tASSIGN);
      expresion();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tLPAREN:{
        jj_consume_token(tLPAREN);
        expresion();
        label_15:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case tCOMMA:{
            ;
            break;
            }
          default:
            jj_la1[28] = jj_gen;
            break label_15;
          }
          jj_consume_token(tCOMMA);
          expresion();
        }
        jj_consume_token(tRPAREN);
        break;
        }
      default:
        jj_la1[29] = jj_gen;
        ;
      }
    }
}

//inst_if: <tIF> expresion <tTHEN> instruccion+ (<tELSIF> expresion <tTHEN> instruccion+)* (<tELSE> instruccion+)? <tENDIF>
  static final public void inst_if() throws ParseException {
    jj_consume_token(tIF);
    expresion();
    jj_consume_token(tTHEN);
    label_16:
    while (true) {
      instruccion();
      if (jj_2_5(1)) {
        ;
      } else {
        break label_16;
      }
    }
    label_17:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case tELSIF:{
        ;
        break;
        }
      default:
        jj_la1[30] = jj_gen;
        break label_17;
      }
      jj_consume_token(tELSIF);
      expresion();
      jj_consume_token(tTHEN);
      label_18:
      while (true) {
        instruccion();
        if (jj_2_6(1)) {
          ;
        } else {
          break label_18;
        }
      }
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tELSE:{
      jj_consume_token(tELSE);
      label_19:
      while (true) {
        instruccion();
        if (jj_2_7(1)) {
          ;
        } else {
          break label_19;
        }
      }
      break;
      }
    default:
      jj_la1[31] = jj_gen;
      ;
    }
    jj_consume_token(tENDIF);
}

//inst_while: <tWHILE> expresion <tLOOP> instruccion+ <tENDLOOP>
  static final public void inst_while() throws ParseException {
    jj_consume_token(tWHILE);
    expresion();
    jj_consume_token(tLOOP);
    label_20:
    while (true) {
      instruccion();
      if (jj_2_8(1)) {
        ;
      } else {
        break label_20;
      }
    }
    jj_consume_token(tENDLOOP);
}

//inst_return: <tRETURN> (expresion)?
  static final public void inst_return() throws ParseException {
    jj_consume_token(tRETURN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case tLPAREN:
    case tINT2CHAR:
    case tCHAR2INT:
    case tTRUE:
    case tFALSE:
    case tCONST_INT:
    case tCONST_CHAR:
    case tNOT:
    case tPLUS:
    case tMINUS:
    case tID:{
      expresion();
      break;
      }
    default:
      jj_la1[32] = jj_gen;
      ;
    }
}

/*--------------------------------------- EXPRESIONES ---------------------------------------*/
